# News-Buzz-Globe

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/app/: auth.py  cache.py  main.py  queries.py  schemas.py
common/: cameo.py  db.py  geo_names.py  logging_config.py  models.py
dbt/: dbt_project.yml
dbt/models/marts/: cleaned_events.sql  events_scored.sql  schema.yml
dbt/models/staging/: schema.yml  stg_gdelt_events.sql
dbt/profiles/: .user.yml  profiles.yml
dbt/tests/: assert_intensity_in_range.sql
docs/: airflow.md  deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  clusterMarkers.js  colors.js  countries.js  index.css
frontend/src/components/: ChatPanel.jsx  EventPopup.jsx  FilterPanel.jsx  Legend.jsx  SearchBox.jsx  StatsBar.jsx  TimeSlider.jsx  Tour.jsx
infra/: docker-compose.yml
infra/airflow/dags/: gdelt_ingest_dag.py
infra/cron/: ingest.sh  maintenance.sh
infra/deploy/: Caddyfile  setup-vm.sh
infra/postgres-init/: 01-postgis.sql  02-airflow-db.sh
ingestion/: config.py  gdelt.py  load.py  maintenance.py  partitions.py  pipeline.py  scoring.py  validate.py
intelligence/: cluster.py  job.py  rag.py  summarize.py
tests/: test_api.py  test_auth.py  test_cache.py  test_clustering.py  test_gdelt_parsing.py  test_geo_names.py  test_partition_retention.py  test_rag.py  test_scoring.py  test_summarize.py  test_trend.py  test_validation.py
