[project]
name = "news-buzz-globe"
version = "0.1.0"
description = "Global news events visualized as buzz-intensity hotspots on an interactive 3D globe, powered by GDELT."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "SQLAlchemy>=2.0",
    "GeoAlchemy2>=0.15",
    "psycopg2-binary>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools]
packages = ["common", "ingestion", "backend", "backend.app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend", "infra"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's declarative defaults are the framework idiom, not a B008 bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
